--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,6 +25,28 @@ body {
   font-weight: 600;
 }
 
+.spinner-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+}
+
+.spinner{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 200px;
+}
+
 /* Style for the select element */
 select {
   padding: 10px 15px;
